# Lab_AI

./: README.md  simple.uml
dataset/: regression.csv  regression_test.csv  regression_train.csv  regression_train_norm.csv
gan/: ALinear.py  dataloader.py  gan.py  shape_display.py
rust/burn-gan/: Cargo.toml
rust/burn-gan/src/: data.rs  discriminator.rs  generator.rs  inference.rs  lib.rs
rust/burn-guide/: Cargo.toml  Dataset.docx  Readme_Backend.txt  burn.uml
rust/burn-guide/src/: data.rs  lib.rs  main.rs  model.rs  training.rs
rust/burn-guide/src/a_simple_linear/: data.rs  inference.rs  learner.rs  mod.rs  model.rs  trainer.rs  training.rs
rust/burn-guide/src/example/: data.rs  inference.rs  mod.rs  training.rs
rust/burn-guide/tmp/guide/: config.json
rust/burn-guide/tmp/guide/checkpoint/: model-1.mpk  model-2.mpk  model-3.mpk  optim-2.mpk  optim-3.mpk  scheduler-3.mpk
rust/burn-regression/: Cargo.toml
rust/burn-regression/src/: main.rs
rust/burn-regression/src/regression/: dataset.rs  inference.rs  learner.rs  mod.rs  model.rs  training.rs
rust/burn-regression/tmp/burn-example-regression/: config.json
rust/burn-regression/tmp/burn-example-regression/checkpoint/: model-2.mpk  model-3.mpk  optim-2.mpk  optim-3.mpk
rust/candle-gan/: Cargo.toml
rust/candle-gan/src/: discriminator.rs  generator.rs  gz_decoder.rs  main.rs  training.rs
rust/candle-guide/: Cargo.toml
rust/candle-guide/src/: lib.rs  main.rs
rust/candle-guide/src/candle_torch/: mod.rs  training.rs
rust/candle-guide/src/rtorch/multilinear/: dataset.rs  mod.rs  model.rs  training.rs
rust/candle-guide/src/simple_linear/: a_linear.rs  dataset.rs  mod.rs  model.rs  training.rs
rust/candle_gan/src/: lib.rs
