[package]
name = "burn-regression"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "~0.18", features = [
    "train",
    "vision",
    "metrics",
    "std",
    "fusion",
    "ndarray",
    "autotune",
], default-features = false }

burn-candle = {version = "~0.18"}
burn-ndarray = {version = "~0.18"}
burn-dataset = {version =  "~0.18"}
#tch = { version = "0.18", features = ["download-libtorch"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
rand = {version = "0.9.2"}
textplots = "0.8.7"
rgb = "0.8.52"