[package]
name = "candle-guide"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
candle-nn = {git = "https://github.com/huggingface/candle.git", version = "0.9.1"}
tokio = {version = "1.4.7", features = ["macros", "rt-multi-thread"]}
anyhow = {version = "1.0"}
rand = {version = "0.9.2"}